--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.29", features = ["derive"] }
+colored = "2.0.0"
 glob = "0.3.0"
 regex = "1.7.0"
 thiserror = "1.0.37"
